--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
 </head>
 
 <body>
-    <header>
-        <img src="Doug-bot.gif" alt="Logo da comunidade Doug">
-        <nav>
-            <a>Cmunidade Doug</a>
-            <a>Tutorial</a>
-            <a>Open Source</a>
-            <a>Comandos</a>
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="Doug-bot.gif" alt="Logo da comunidade Doug">
+        <nav class="cabeçalho-menu">
+            <a class="cabeçalo-menu-item">Cmunidade Doug</a>
+            <a class="cabeçalo-menu-item">Tutorial</a>
+            <a class="cabeçalo-menu-item">Open Source</a>
+            <a class="cabeçalo-menu-item">Comandos</a>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <div>
-                <h1>Doug Bot</h1>
-                <h2>Deixe sua comunidade segura de um jeito fácil</h2>
-                <button>Me adicione!</button>
+    <main class="conteudo">
+        <section class="conteúdo-principal">
+            <div class="conteúdo-principal-escrito">
+                <h1 class="conteúdo-principal-tituo">Doug Bot</h1>
+                <h2 class="conteúdo-principal-subttitulo">Deixe sua comunidade segura de um jeito fácil</h2>
+                <button class="conteúdo-principal-escrito-botão">Me adicione!</button>
             </div>
-            <img src="D4u1z3r-a0949db8-ea8e-4d7b-a862-7060f92ea04b.gif" alt="Imagem do nosso heroi favorito.">
+            <img class="contudo-principal-imagem" src="D4u1z3r-a0949db8-ea8e-4d7b-a862-7060f92ea04b.gif" alt="Imagem do nosso heroi favorito.">
         </section>
 
-        <section>
-            <h3>O que ela faz por você?</h3>
-            <p>1. Cria um sistema de verificação capcha para garantir que novos membros não são robôs</p>
-            <p>2.Possui um sistema de banimento automático para links suspeitos que forem enviados na comunidade</p>
-            <p>3. Sistema de avisos e banimento manual, para pessoas adminstradoras utilizarem</p>
+        <section class="conteudo-principal-secundario">
+            <h3 class="conteudo-principal-secundario-titulo">O que ela faz por você?</h3>
+            <p class="conteudo-principal-secundario-paragrafo">1. Cria um <strong> de verificação capchastrong</strong> para garantir que novos membros não são robôs</p>
+            <p class="conteudo-principal-secundario-paragrafo">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
+            <p class="conteudo-principal-secundario-paragrafo">3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas adminstradoras utilizarem</p>
         </section>
     </main>
 
-    <footer>
-
+    <footer class="rodape">
+        <img class="rodape-imagem" src="DOUGLAS.png" alt="logo do rodapé">
     </footer>
 </body>
 
