--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta nome="descritption" content="Um bote que ira moderar e deixar sua comunidade segura de um jeito fácil">
     <title>Doug bot - Moedri a sua comunidade do Discord</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header class="cabeçalho">
-        <img class="cabeçalho-imagem" src="Doug-bot.gif" alt="Logo da comunidade Doug">
-        <nav class="cabeçalho-menu">
-            <a class="cabeçalo-menu-item">Cmunidade Doug</a>
-            <a class="cabeçalo-menu-item">Tutorial</a>
-            <a class="cabeçalo-menu-item">Open Source</a>
-            <a class="cabeçalo-menu-item">Comandos</a>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="Doug-bot.gif" alt="Logo da comunidade Doug" >
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item">Comunidade Doug</a>
+            <a class="cabecalho-menu-item">Tutorial</a>
+            <a class="cabecalho-menu-item">Open Source</a>
+            <a class="cabecalho-menu-item">Comandos</a>
         </nav>
     </header>
 
