--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section class="conteudo-principal-secundario">
             <h3 class="conteudo-principal-secundario-titulo">O que ela faz por você?</h3>
-            <p class="conteudo-principal-secundario-paragrafo">1. Cria um <strong> de verificação capchastrong</strong> para garantir que novos membros não são robôs</p>
+            <p class="conteudo-principal-secundario-paragrafo">1. Cria um <strong>sistema de verificação capchastrong</strong> para garantir que novos membros não são robôs</p>
             <p class="conteudo-principal-secundario-paragrafo">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
             <p class="conteudo-principal-secundario-paragrafo">3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas adminstradoras utilizarem</p>
         </section>
